=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.0
 - Fixed: Corrected error occurring on Media Tab when "new" and "old" media changes are not yet accepted. (windmillway)
 - Changed: Album Tab Page, minor CSS alignment changes, Media Tab page, correct audio thumbnail (windmillway)
 - Fixed: File not found errors on Album Tab page if GEDCOM loaded from PAF (windmillway)
 - Added: Option to include/exclude married names on indi/fam lists
 - Fixed: [ 2391188 ] Tree Tab Error (fisharebest)
 - Added: Load welcome page blocks in parallel using ajax
 - Added: Load indi page tabs in parallel using ajax
 - Fixed: [ 2328568 ] Search finds too much (fisharebest)
 - Fixed: [ 2058324 ] [3677] Search Routine with Multiple Gedcoms (fisharebest)
 - Fixed: [ 2391217 ] 4.1.6 error when search would result in a private ID (fisharebest)
 - Fixed: [ 1849095 ] Handling of invalid FAM number in search (fisharebest)
 - Fixed: [ 1965654 ] 4.1.5 General Search Living Names being shown (fisharebest)
 - Fixed: [ 2096827 ] [3792] Search still shows people from wrong gedcom (fisharebest)
 - Changed: Use CSS instead of images to display hit counters (canajun2eh)
 - Fixed: [ 2099148 ] Wrong EOL on translation (fisharebest)
 - Fixed: [ 1814907 ] Highlighted Starred Names in Search List (fisharebest)
 - Fixed: [ 1786458 ] Top nn Surnames Block - Wrong names and counters (fisharebest)
 - Fixed: [ 1762942 ] SVN1348 - famlist - people with partly unknown names (fisharebest)
 - Fixed: [ 2399903 ] [4450]Top 10 Given breaks html validation (wooc)
 - Fixed: [ 2397080 ] [4417] error on close relatives tab (fisharebest)
 - Fixed: [ 2396047 ] Quick update: "Family with ..." shows Death fact (canajun2eh)
 - Fixed: [ 2392462 ] Quick Update, "family with ..." error (canajun2eh)